# tox-uv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini  tox.toml
.github/: FUNDING.yaml  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto_handle_bots.yaml  check.yaml  check.yml  release.yaml  release.yml
meta/: README.md  __init__.py  hatch_build.py  pyproject.toml
meta/tests/: test_meta_build.py
meta/tox_uv/: __init__.py
src/tox_uv/: _installer.py  _package.py  _package_types.py  _run.py  _run_lock.py  _run_pep723.py  _util.py  _venv.py  _venv_query.py  plugin.py
tests/: conftest.py  test_setupdir.py  test_tox_uv_api.py  test_tox_uv_installer.py  test_tox_uv_lock.py  test_tox_uv_package.py  test_tox_uv_pep723.py  test_tox_uv_venv.py  test_version.py
tests/demo_pkg_inline/: build.py
tests/demo_pkg_no_pyproject/: setup.cfg  setup.py
tests/demo_pkg_workspace/: pyproject.toml
tests/demo_pkg_workspace/src/demo_root/: main.py
tests/demo_with_dash/: build.py
