[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.5",
  "hatchling>=1.28",
]

[project]
name = "tox-uv-bare"
description = "Integration of uv with tox (bare package, bring your own uv)."
readme = "README.md"
keywords = [
  "environments",
  "isolated",
  "testing",
  "virtual",
]
license = "MIT"
maintainers = [
  { name = "Bernát Gábor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: System",
]
dynamic = [
  "version",
]
dependencies = [
  "packaging>=26",
  "tomli>=2.4; python_version<'3.11'",
  "tox<5,>=4.40",
  "typing-extensions>=4.15; python_version<'3.10'",
]
urls.Changelog = "https://github.com/tox-dev/tox-uv/releases"
urls.Documentation = "https://github.com/tox-dev/tox-uv#tox-uv"
urls.Homepage = "https://github.com/tox-dev/tox-uv"
urls.Source = "https://github.com/tox-dev/tox-uv"
urls.Tracker = "https://github.com/tox-dev/tox-uv/issues"
entry-points.tox.tox-uv = "tox_uv.plugin"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "pkg-meta" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "covdefaults>=2.3",
  "devpi-process>=1.1",
  "diff-cover>=10.2",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
]
type = [ "ty>=0.0.17", { include-group = "test" } ]
lint = [ "pre-commit-uv>=4.2" ]
pkg-meta = [ "check-wheel-contents>=0.6.3", "twine>=6.2", "uv>=0.9.27" ]

[tool.hatch]
build.hooks.vcs.version-file = "src/tox_uv/version.py"
build.targets.sdist.include = [
  "/src",
  "/tests",
]
build.targets.wheel.packages = [ "src/tox_uv" ]
version.source = "vcs"

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # Conflict with formatter
  "CPY",    # No copyright statements
  "D",      # no documentation for now
  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D205",   # 1 blank line required between summary line and description
  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "D301",   # Use `r"""` if any backslashes in a docstring
  "D401",   # First line of docstring should be in imperative mood
  "DOC201", # no support for sphinx
  "ISC001", # Conflict with formatter
  "RUF067", # `__init__` module should only contain docstrings and re-exports
  "S104",   # Possible binding to all interface
]
lint.per-file-ignores."meta/tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLC2701", # private import is fine
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S",       # no safety concerns
  "S101",    # asserts allowed in tests...
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don't care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLC2701", # private import is fine
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S",       # no safety concerns
  "S101",    # asserts allowed in tests...
]
lint.isort = { known-first-party = [
  "tox_uv",
  "tests",
], required-imports = [
  "from __future__ import annotations",
] }
lint.preview = true

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
write-changes = true
count = true

[tool.pytest]
ini_options.norecursedirs = "tests/data/*"
ini_options.verbosity_assertions = 2

[tool.coverage]
run.parallel = true
run.patch = [ "subprocess" ]
run.plugins = [
  "covdefaults",
]
paths.other = [
  ".",
  "*/tox_uv",
  "*\\tox_uv",
]
paths.source = [
  "src",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
report.fail_under = 100
report.omit = [
  "src/tox_uv/_venv_query.py",
]
html.show_contexts = true
html.skip_covered = false

[tool.ty]
environment.python-version = "3.14"
